Refactor and integrate chat assistant to core and api
- Rename prompt to chat and follow the same convension throughout
- Rename /prompts -> /chat
- Change task priority type to string
