# docs/swagger/swagger.json
@@ -9,9 +9,9 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/prompts": {
+        "/chat": {
             "post": {
-                "description": "Process a natural language prompt for task management",
+                "description": "Chat in natural language for task management",
                 "consumes": [
                     "application/json"
                 ],
@@ -19,17 +19,17 @@
                     "application/json"
                 ],
                 "tags": [
-                    "prompts"
+                    "chat"
                 ],
-                "summary": "Process Task Prompt",
+                "summary": "Chat",
                 "parameters": [
                     {
-                        "description": "Prompt input",
-                        "name": "prompt",
+                        "description": "Chat input",
+                        "name": "chat",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.PromptInput"
+                            "$ref": "#/definitions/api.ChatInput"
                         }
                     }
                 ],
@@ -37,7 +37,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.PromptResponse"
+                            "$ref": "#/definitions/api.ChatResponse"
                         }
                     }
                 }
@@ -210,7 +210,7 @@
         }
     },
     "definitions": {
-        "api.PromptInput": {
+        "api.ChatInput": {
             "type": "object",
             "properties": {
                 "text": {
@@ -218,7 +218,7 @@
                 }
             }
         },
-        "api.PromptResponse": {
+        "api.ChatResponse": {
             "type": "object",
             "properties": {
                 "response": {
@@ -276,11 +276,11 @@
             }
         },
         "task.Priority": {
-            "type": "integer",
+            "type": "string",
             "enum": [
-                1,
-                2,
-                3
+                "LOW",
+                "MEDIUM",
+                "HIGH"
             ],
             "x-enum-varnames": [
                 "PriorityLow",
